Bug 872978: process any pending stream resets on incoming resets r=tuexen